HMDScheme.peg
start =
      ws exprs:expr*
      { return exprs; }

expr =
    form:(chr / sexpr / qexpr / digit / atom / str) ws
    { return form; }

atom =
    chars:validchar+
    { return chars.join(""); }

sexpr =
    "(" ws exprs:expr* ")"
    { return exprs; }

qexpr = 
    q:"'" e:expr
    { return ['quote', e]; }

digit =
    ds:[0-9]+
    { return parseInt(ds.join(""), 10); }

chr = 
    '\'' s:strchar '\''
    { return s; }

str =
   '"' s:strchar+ '"'
   { return ['list'].concat(s); }

strchar =
    c:validchar
    { return '\\' + c; }

validchar =
    [0-9a-zA-Z_?!+-=@#$%^&*/<>]

comment =
    ";;" (!newline .)*

newline = 
    [\r\n]

space = 
    [\t ]

ws = (comment / newline / space)*
